--- a/index.qmd
+++ b/index.qmd
@@ -50,7 +50,7 @@ submitted by 11:59 p.m. on the due date***.
 |      | `r advdate(wed,9)`  | Coding assignment 3            |                                                                                 📖                                                                                  |                                                                                                                |                      🖥️                       | [🧮](assignments/coding-assignment-3.qmd "Coding assingment 3") |   `r advdate(sun,10)`   |
 |  11  | `r advdate(mon,10)` | Research design                |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-11.1.qmd "Week 11.1 slides") |                                                                 |                         |
 |      | `r advdate(wed,10)` | Distributions                  |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-11.2.qmd "Week 11.2 slides") |                               ✍️                                |   `r advdate(sun,11)`   |
-|  12  | `r advdate(mon,11)` | Sampling and uncertainty       |                                                                                 📖                                                                                  |                                                       📺                                                       |                      🖥️                       |                                                                 |                         |
+|  12  | `r advdate(mon,11)` | Sampling and uncertainty       |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-12.1.qmd "Week 12.1 slides") |                                                                 |                         |
 |      | `r advdate(wed,11)` | Hypothesis testing 1           |                                                                                 📖                                                                                  |                                                       📺                                                       |                      🖥️                       |                                                                 |                         |
 |  13  | `r advdate(mon,12)` | Hypothesis testing 2           |                                                                                 📖                                                                                  |                                                       📺                                                       |                      🖥️                       |                                                                 |                         |
 |      | `r advdate(wed,12)` | Coding assignment 4            |                                                                                 📖                                                                                  |                                                       📺                                                       |                      🖥️                       |                               🧮                                |   `r advdate(sun,13)`   |
