--- a/index.qmd
+++ b/index.qmd
@@ -52,7 +52,7 @@ submitted by 11:59 p.m. on the due date***.
 |      | `r advdate(wed,10)` | Distributions                  |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-11.2.qmd "Week 11.2 slides") |                               ✍️                                |   `r advdate(sun,11)`   |
 |  12  | `r advdate(mon,11)` | Sampling and uncertainty       |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-12.1.qmd "Week 12.1 slides") |                                                                 |                         |
 |      | `r advdate(wed,11)` | Hypothesis testing 1           |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-12.2.qmd "Week 12.2 slides") |                                                                 |                         |
-|  13  | `r advdate(mon,12)` | Hypothesis testing 2           |                                                                                 📖                                                                                  |                                                       📺                                                       |                      🖥️                       |                                                                 |                         |
+|  13  | `r advdate(mon,12)` | Hypothesis testing 2           |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-13.1.qmd "Week 13.1 slides") |                                                                 |                         |
 |      | `r advdate(wed,12)` | Coding assignment 4            |                                                                                 📖                                                                                  |                                                       📺                                                       |                      🖥️                       |                               🧮                                |   `r advdate(sun,13)`   |
 |  14  | `r advdate(mon,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
 |      | `r advdate(wed,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
