Update assignments, upload slides 13.2

--- a/index.qmd
+++ b/index.qmd
@@ -49,14 +49,14 @@ submitted by 11:59 p.m. on the due date***.
 |  10  | `r advdate(mon,9)`  | Predictive modeling            |                                                                                 📖                                                                                  |                                                       📺                                                       |                      🖥️                       |                                                                 |                         |
 |      | `r advdate(wed,9)`  | Coding assignment 3            |                                                                                 📖                                                                                  |                                                                                                                |                      🖥️                       | [🧮](assignments/coding-assignment-3.qmd "Coding assingment 3") |   `r advdate(sun,10)`   |
 |  11  | `r advdate(mon,10)` | Research design                |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-11.1.qmd "Week 11.1 slides") |                                                                 |                         |
-|      | `r advdate(wed,10)` | Distributions                  |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-11.2.qmd "Week 11.2 slides") |                               ✍️                                |   `r advdate(sun,11)`   |
+|      | `r advdate(wed,10)` | Distributions                  |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-11.2.qmd "Week 11.2 slides") |  [✍️](project/project-assignment-2.qmd "Project assignment 2")  |   `r advdate(sun,11)`   |
 |  12  | `r advdate(mon,11)` | Sampling and uncertainty       |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-12.1.qmd "Week 12.1 slides") |                                                                 |                         |
 |      | `r advdate(wed,11)` | Hypothesis testing 1           |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-12.2.qmd "Week 12.2 slides") |                                                                 |                         |
 |  13  | `r advdate(mon,12)` | Hypothesis testing 2           |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-13.1.qmd "Week 13.1 slides") |                                                                 |                         |
-|      | `r advdate(wed,12)` | Coding assignment 4            |                                                                                 📖                                                                                  |                                                       📺                                                       |                      🖥️                       |                               🧮                                |   `r advdate(sun,13)`   |
+|      | `r advdate(wed,12)` | Coding assignment 4            |                                                                                 📖                                                                                  |                                                       📺                                                       |                      🖥️                       | [🧮](assignments/coding-assignment-4.qmd "Coding assingment 4") |   `r advdate(sun,13)`   |
 |  14  | `r advdate(mon,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
 |      | `r advdate(wed,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
 |  15  | `r advdate(mon,14)` | Lightning talks                |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
 |      | `r advdate(wed,14)` | Lightning talks                |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
-|  16  | `r advdate(mon,15)` | Wrap-up: DS careers            |                                                                                                                                                                     |                                                                                                                |                                               |                               ✍️                                | Date of scheduled final |
+|  16  | `r advdate(mon,15)` | Wrap-up: DS careers            |                                                                                                                                                                     |                                                                                                                |                                               |  [✍️](project/project-assignment-3.qmd "Project assignment 3")  | Date of scheduled final |
 :::
