--- a/index.qmd
+++ b/index.qmd
@@ -56,7 +56,7 @@ submitted by 11:59 p.m. on the due date***.
 |      | `r advdate(wed,12)` | Coding assignment 4            |                                                                                 📖                                                                                  |                                                       📺                                                       | [🖥️](slides/week-13.2.qmd "Week 13.2 slides") | [🧮](assignments/coding-assignment-4.qmd "Coding assingment 4") |   `r advdate(sun,13)`   |
 |  14  | `r advdate(mon,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
 |      | `r advdate(wed,13)` | 🦃 No class–Thanksgiving break |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
-|  15  | `r advdate(mon,14)` | Lightning talks                |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
+|  15  | `r advdate(mon,14)` | Project Workshop Session       |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
 |      | `r advdate(wed,14)` | Lightning talks                |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                         |
-|  16  | `r advdate(mon,15)` | Wrap-up: DS careers            |                                                                                                                                                                     |                                                                                                                |                                               |  [✍️](project/project-assignment-3.qmd "Project assignment 3")  | Date of scheduled final |
+|  16  | `r advdate(mon,15)` | Lightning talks                |                                                                                                                                                                     |                                                                                                                |                                               |  [✍️](project/project-assignment-3.qmd "Project assignment 3")  | Date of scheduled final |
 :::
