--- a/course-syllabus.qmd
+++ b/course-syllabus.qmd
@@ -6,16 +6,16 @@ title: "Syllabus"
 
 | Course: DATS 1001-Data Science for All
 | Lecture: MW 12:45-2:00
-| Classroom: [1776 G. St., NW](https://maps.app.goo.gl/vXRsm4Ausht4q2469) Rm. C103
+| Classroom: [Duques Hall](https://g.co/kgs/81oCUV4) Rm. 152
 |
 | Instructor: Prof. Emmanuel Teitelbaum
 | Email: [ejt\@gwu.edu](mailto:ejt@gwu.edu)
-| Office Hours:Mondays 3-5 p.m. and by appointment.
-| Location: Online or in Monroe Hall, Rm. 411, Sign up [here](https://calendly.com/emmanuel-teitelbaum)
+| Office Hours: Mondays 9-11 a.m. and by appointment.
+| Location: Online or in [Monroe Hall](https://g.co/kgs/yuSsRto), Rm. 411, Sign up [here](https://calendly.com/emmanuel-teitelbaum)
 |
 | Teaching Assistant: Gourab Mukherjee
 | Email: [gourab.mukherjee\@email.gwu.edu](mailto:gourab.mukherjee@email.gwu.edu)
-| Office Hours: Fridays, 9:30-11:30 a.m.
+| Office Hours: Fridays, 3-5 p.m.
 | Location: Online, follow [this link](https://gwu-edu.zoom.us/my/gourabmukherjee)
 |
 | Teaching Assistant: Sai Srinivas Lakkoju
@@ -24,8 +24,6 @@ title: "Syllabus"
 | Location: Online, follow [this link](https://gwu-edu.zoom.us/my/saisrinivaslakkoju)
 |
 | Credit Hours: 3.0.
-|
-| The best way to contact me is via the course Discord server for inquiries about code or course material and by email or during office hours for personal matters.
 
 ## Learning Objectives
 
@@ -50,14 +48,14 @@ All academic readings will be linked to the course website. There are no textboo
 1.  Quizzes (20%)
 2.  Coding assignments (40%)
 3.  Final project (40% of final grade)
-    a. Assignment 1 (10%)
-    b. Assignment 2 (10%)
-    c. Assignment 3 (10%)
-    d. Lightning Talk (10%)
+    a. Proposal (5%)
+    b. Data Preparation (5%)
+    c. Lightning Talk (10%)
+    d. Report (20%)
 
 ### Quizzes
 
-Students will complete approximately ten graded quizzes. These exercises will be oriented towards strengthening the student's ability to manipulate, visualize and communicate data with R and Quarto. I will drop your lowest two quiz scores. Please do not email me about missed quizzes.
+Students will complete approximately ten graded quizzes. These exercises will be oriented towards strengthening the student's ability to manipulate, visualize and communicate data with R and Quarto. I will drop your lowest two quiz scores so you do not have to worry about making up missed quizzes. **Please do not email me about missed quizzes.**
 
 ### Coding Assignments
 
@@ -88,13 +86,69 @@ The grading scale below maps your final point or percentage total to your final 
 
 ## Late Work
 
-Late assignments will incur a penalty of 1 percentage point per day. Late work **will not be accepted more than 7 days past the deadline.**
+Late assignments will incur a penalty of 1 percentage point per day. Late work **will not be accepted more than 7 days past the deadline.** Please also note that there will be **no makeups** for missed quizzes.
 
 Students with exceptional circumstances may receive accommodations for late work under exceptional circumstances, and in consultation with the students' academic advisor, when a verified medical excuse written by a qualified medical professional is provided.
 
 Accommodations are automatically approved for university-approved absences such as sporting events, religious holidays, etc. but these should be provided to the instructor by the end of the second week of the semester.
 
 No exceptions will be made to the late work policy.
+
+## Course Communication 
+
+### Discord  
+
+The best way to ask questions about concepts and coding issues or anything related to the course material (including assignment requirements and due dates) is via a public post on the course *Discord server*.  This is going to be our main communication channel for a few reasons:
+
+1) You can insert code snippets and images directly into your questions, which will make it easier for us to understand your problem and provide you with a solution (whereas with email you cannot); 
+
+2) Other students can see your question and the answer, which will everyone to learn from the discussion. You may think you are the only one with a question, but chances are that if you are thinking something so are others in the course; 
+
+3) Discord helps to establish a sense of community among students, and we want this course to feel like a modern, supportive and inclusive data science community. 
+
+The TAs and I will check the Discord at least once a day and will respond to your questions as soon as possible. 
+
+Please **do not send emails** questions about the course material. Please also **do not send direct messages (DMs)** or friend requests on Discord. We will only respond to public messages. Although it may be very kind to send them, friend requests will be ignored due to the need to maintain professional boundaries between students and instructors.
+
+The link to the Discord server will be distributed at the start of the semester via Blackboard. Please make sure to join the server as soon as possible as the link will expire after a few days.
+
+### Office hours
+
+If you have asked your question on Discord and could not get an answer, you can come to office hours. You can also come to office hours if you have a personal matter that you would like to discuss. For content-related questions, the TAs will be your first point of contact. If they cannot answer your question, they will refer you to me, at which point you can sign up for one of my office hour slots via Calendly.
+
+To make the meeting more effective, you can:
+
+-   Gather materials (assignments, notes, etc.) ready in advance
+-   Be ready to take notes during office hours
+-   Ask follow up questions if you need clarification
+-   Confirm any action plan at the close of the meeting
+-   Following through on any action plan
+
+### Email
+
+Emails should be kept to a minimum in this course. But if you have tried the Discord and office hours and still have a question, you can email me. Please make sure to include "DATS 1001" in the subject line of your email. I will do my best to respond to your email within 24 hours.
+
+## Netiquette
+
+Behind every name there is a person.
+
+To ensure safe and meaningful learning experiences for everyone, we all agree to:
+
+-   Remain professional, respectful, and courteous at all times on all platforms.
+-   Keep in mind this is a college class. Something that would be inappropriate in an in-person classroom is also inappropriate in an online classroom.
+-   When upset, we'll wait a day or two prior to posting. Messages posted or emailed in anger are often regretted later.
+-   Ask one another for clarification if we find a communication offensive or difficult to understand.
+-   Avoid sweeping generalizations. Back up our stated opinions with facts and reliable sources.
+-   Understand that we may disagree and that exposure to other people's opinions is part of the learning experience.
+-   Just as we would like our privacy respected, we will respect the privacy of other course participants and what they share.
+
+I (the instructor) reserve the right to delete any post or communication in our course that is deemed inappropriate without prior notification to the student. This includes anything containing language that is offensive, rude, profane, racist, or hateful. Items that are seriously off-topic or serve no purpose other than to vent frustration will also be removed.
+
+Using outside communication apps
+
+I am aware that you and your peers might communicate using tools outside of GW's Blackboard, my course website, our course Discord channel, or email systems. Rules of netiquette and appropriate communication extend to these tools as well as to Blackboard. If you see any tool being used inappropriately (i.e., any communication containing language that is offensive, rude, profane, racist, or hateful; uses that promote cheating of any kind), contact me as soon as possible to speak privately about it.
+
+(Adapted from [Lake Superior Connect, Creative Commons Attribution 3.0](https://creativecommons.org/licenses/by/3.0/))
 
 ## Policy on AI Tools
 
@@ -109,24 +163,6 @@ As part of this course, students will have the option to use ChatGPT and other L
 It is also important to note that some uses of LLMs are more appropriate than others. For example, it is acceptable to use LLMs to generate boilerplate code or to help with syntax, but it is not acceptable to use an LLM to complete entire assignments or assessments. Students should use LLMs as a starting point and then modify and expand on the generated code to demonstrate their own understanding and skills. 
 
 One way to think of LLMs is as a tutor or classmate. What would it be appropriate to ask a tutor or classmate for help with? What would you not be permitted ask a tutor or classmate for help with?
-
-## Office Hours
-
-Another way we can work toward your success in the course is through office/student hours. Please make an appointment to talk with me during this time. You can work with me to:
-
--   Clarify any questions about the syllabus or course content
--   Review an assignment you've completed and have questions about
--   Step through practice problems or questions
--   Get study strategies
--   Discuss grades
-
-To make the meeting more effective, you can:
-
--   Gather materials (assignments, notes, etc.) ready in advance
--   Be ready to take notes during office hours
--   Ask follow up questions if you need clarification
--   Confirm any action plan at the close of the meeting
--   Following through on any action plan
 
 ## Prerequisites
 
@@ -181,38 +217,6 @@ Academic dishonesty is defined as cheating of any kind, including misrepresentin
 ## Aiming For Success
 
 I care about your learning and also about this subject matter, and I am here to help you have a meaningful learning experience. I expect you to take ownership of your learning: you can get more out of the course by thoughtfully participating in discussions, actively taking notes on readings and lectures, and giving your best effort overall. I will hold you to the highest standards for academic honesty and integrity in your work. I will also encourage you to collaborate and learn from your peers through thoughtful and respectful discussion. It is recommended you log in daily order to keep up with course requirements. I must highlight that communication is vital, so I hope you feel comfortable reaching out to me if you are struggling or have concerns or need [accommodations beyond accessibility](#_heading=h.41mghml). We can determine strategies to set you up for success. Finally, I look forward to collaborating with you in this course to create a meaningful experience for everyone.
-
-## Course Communication
-
-Communication in our course is essential; clearing up questions earlier than later is a good practice, so please don't hesitate to reach out to me. In any mode of communication used in our course, all of us will follow [netiquette](#_heading=h.49x2ik5) found in our syllabus.
-
-We will communicate primarily through [GW's Blackboard System](https://blackboard.gwu.edu) and the Discord server. Announcements and emails sent through Blackboard automatically go to your GW email address (i.e., userid\@gwu.edu). Please check your GW email account on a daily basis or forward your GW email to another address that you check daily.
-
-I will respond to emails/discussion posts within 48 hours (i.e., "24 hours on weekdays and on the next business day over weekends and holidays.") I will provide feedback on assignments/exams within 3 days (i.e., "five days on weekdays and on the next business day over weekends and holidays.")
-
-You can post general course-related questions to our Discord server. Please post your question here first rather than emailing me directly if your question regards the course material. However, if you have a question that is more personal in nature (i.e., grades), please email me directly to set up an appointment.
-
-## Netiquette
-
-Behind every name there is a person.
-
-To ensure safe and meaningful learning experiences for everyone, we all agree to:
-
--   Remain professional, respectful, and courteous at all times on all platforms.
--   Keep in mind this is a college class. Something that would be inappropriate in an in-person classroom is also inappropriate in an online classroom.
--   When upset, we'll wait a day or two prior to posting. Messages posted or emailed in anger are often regretted later.
--   Ask one another for clarification if we find a communication offensive or difficult to understand.
--   Avoid sweeping generalizations. Back up our stated opinions with facts and reliable sources.
--   Understand that we may disagree and that exposure to other people's opinions is part of the learning experience.
--   Just as we would like our privacy respected, we will respect the privacy of other course participants and what they share.
-
-I (the instructor) reserve the right to delete any post or communication in our course that is deemed inappropriate without prior notification to the student. This includes anything containing language that is offensive, rude, profane, racist, or hateful. Items that are seriously off-topic or serve no purpose other than to vent frustration will also be removed.
-
-Using outside communication apps
-
-I am aware that you and your peers might communicate using tools outside of GW's Blackboard, my course website, our course Discord channel, or email systems. Rules of netiquette and appropriate communication extend to these tools as well as to Blackboard. If you see any tool being used inappropriately (i.e., any communication containing language that is offensive, rude, profane, racist, or hateful; uses that promote cheating of any kind), contact me as soon as possible to speak privately about it.
-
-(Adapted from [Lake Superior Connect, Creative Commons Attribution 3.0](https://creativecommons.org/licenses/by/3.0/))
 
 ## Policies
 
