--- a/index.qmd
+++ b/index.qmd
@@ -28,7 +28,7 @@ submitted by 11:59 p.m. on the due date***.
 ::: column-screen-inset-right
 | Week | Date                | Topic                         |                                                                               Reading                                                                               |                                                     Video                                                      |                    Slides                     |                           Assignment                            |      Due Date       |
 |:-------:|---------|---------|:-------:|:-------:|:-------:|:-------:|:-------:|
-|  1   | `r advdate(wed,0)`  | Welcome to DATS 1001          | [📖](https://rstudio-education.github.io/hopr/starting.html "hopwr, Appendix A and B") [📖](https://quarto.org/docs/get-started/hello/rstudio.html "Hello, Quarto") |                     [📺](https://youtu.be/eimM6pNkYjE) [📺](https://youtu.be/6QN9ZYURDFg)                      |                                               |                                                                 |                     |
+|  1   | `r advdate(wed,0)`  | Welcome to DATS 1001          | [📖](https://rstudio-education.github.io/hopr/starting.html "hopwr, Appendix A and B") [📖](https://quarto.org/docs/get-started/hello/rstudio.html "Hello, Quarto") |                     [📺](https://youtu.be/eimM6pNkYjE) [📺](https://youtu.be/6QN9ZYURDFg)                      |  [🖥️](slides/week-1.1.qmd "Week 1.2 slides")  |                                                                 |                     |
 |      | `r advdate(fri,0)`  | Meet ouR tech stack           |                                                [📖](https://www.markdownguide.org/getting-started/ "Markdown Guide")                                                |                               [📺](https://www.youtube.com/watch?v=bTVIMt3XllM)                                |  [🖥️](slides/week-1.2.qmd "Week 1.2 slides")  |                                                                 |                     |
 |  2   | `r advdate(wed,1)`  | R coding basics               |                                                     [📖](https://rstudio-education.github.io/hopr/basics.html)                                                      |    [📺](https://www.youtube.com/watch?v=hvFBDmT4bdY) [📺](https://youtu.be/9f2g7RN5N0I?si=WMsaGlhFC7Fx-ZNy)    |  [🖥️](slides/week-2.1.qmd "Week 2.1 slides")  |                                                                 |                     |
 |      | `r advdate(fri,1)`  | Intro to the Tidyverse        |                                                                                                                                                                     |                                                                                                                |                                               |                                                                 |                     |
