--- a/index.qmd
+++ b/index.qmd
@@ -35,7 +35,7 @@ submitted by 11:59 p.m. on the due date***.
 |  | `r advdate(fri,1)` | Intro to the Tidyverse | [📖](https://r4ds.hadley.nz/intro "rd4s, intro") | [📺](https://youtu.be/izFssYRsLZs?si=b6Oy4atpRrkfEKzB "Hadley Wickham on code maintenance") | [🖥️](slides/week-2.2.qmd "Intro to the Tidyverse") |  |  |
 | 3 | `r advdate(wed,2)` | Grammar of graphics | [📖](https://r4ds.hadley.nz/data-import "r4ds, chap. 7") [📖](https://r4ds.hadley.nz/data-visualize.html "r4ds, 2") | [📺](https://youtu.be/QG1oDJPoIio "Make a bar chart") [📺](https://youtu.be/-1YhCql-gMo "Make a histogram") | [🖥️](slides/week-3.1.qmd "Week 3.1 slides") |  |  |
 |  | `r advdate(fri,2)` | Which visualization do I use? | [📖](https://r4ds.hadley.nz/layers "r4ds, 9.1-9.4") | [📺](https://youtu.be/PnmQ2MFQpIc "Make a line chart") [📺](https://youtu.be/FiosjUVyfLM "Make a scatterplot") | [🖥️](slides/week-3.2.qmd "Week 3.2 slides") |  |  |
-| 4 | `r advdate(wed,3)` | Visualization best practices | [📖](https://r4ds.hadley.nz/communication "r4ds, chap. 11") | 📺 | [🖥️](slides/week-4.1.qmd "Week 4.1 slides") |  |  |
+| 4 | `r advdate(wed,3)` | Visualization best practices | [📖](https://r4ds.hadley.nz/communication "r4ds, chap. 11") | [📺](https://youtu.be/l6AVQOxkzxQ?si=UUFExkQgdzfaJOHW "Red green colourblindness") | [🖥️](slides/week-4.1.qmd "Week 4.1 slides") |  |  |
 |  | `r advdate(fri,3)` | Coding assignment 1 | [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset") |  |  | [🧮](assignments/coding-assignment-1.qmd "Coding assignment 1") | `r advdate(mon,4)` |
 | 5 | `r advdate(wed,4)` | What is tidy data? | [📖](https://r4ds.hadley.nz/data-tidy#sec-tidy-data "r4ds, chap. 5.2") | [📺](https://youtu.be/ZwJsSjJRuMU?si=A6ucJ7jHL1s3T3uT "Reading data into R") | [🖥️](slides/week-5.1.qmd "Week 5.1 slides") |  |  |
 |  | `r advdate(fri,4)` | Working with data | [📖](https://r4ds.hadley.nz/data-transform "rd4s, chap. 3.1-3.4") | [📺](https://youtu.be/ScQD47eJeAE?si=Rc6epCTKhQVtkCjS "Transforming data w/ dplyr verbs") | [🖥️](slides/week-5.2 "Week 5.2 slides") |  |  |
